public class Food extends Item{

    @Override
    void used(Player p, Activity a);
}
