public class PlayerContainer {

    public Player pid[];

    public void getPlayer(int pid);
}
