public class Rope extends Item{

    @Override
    void used(Player p, Activity a);
}
