public class StableTile extends Tile {

}
